# hierarchical-primitives-3d

./: .gitignore  ABC_DATASET_RANK_BENCHMARK.md  ADAPTIVE_RANK_EXPERIMENTS.md  CITATION.cff  README.md  REPO_NOTES.md  environment.yml  pyproject.toml  requirements.txt
configs/: data_tucker.yaml  train_image_cond.yaml  train_text_cond.yaml  train_uncond_si.yaml
diffats/: __init__.py  models.py  render.py  sampling.py  utils.py
docs/: DiffATs_v4_v5c_Full_Report_2026-06-11.docx  Tokenization_Report.docx  Tucker_Reconstruction_Report.docx
scripts/: train.py
scripts/conditioning/: bundle_embeddings.py  cache_dinov2.py  caption.py  encode_clip.py  render_batch.py
scripts/data/: build_dataset.py  preprocess_tucker.py  realign.py  recon_vs_original.py
scripts/demo/: agent_demo_claude.py  agent_demo_qwen.py
scripts/eval/: analyze_holdout.py  eval.py  pick_holdout.py
scripts/slurm/: submit_build_v2.sh  submit_bundle_embs.sh  submit_cache_dinov2.sh  submit_caption_batch.sh  submit_encode_clip.sh  submit_eval_v10_holdout.sh  submit_eval_v5c.sh  submit_eval_v6.sh  submit_eval_v7.sh  submit_eval_v7_175k.sh  submit_eval_v7_2_v8p.sh  submit_eval_v7_3_325k.sh  submit_eval_v7_4ab.sh  submit_eval_v8_2.sh  submit_eval_v9.sh  submit_holdout_cfg_sweep.sh  submit_holdout_v9_400k.sh  submit_phase3_claude.sh  submit_phase3_demo.sh  submit_qr_test.sh  submit_realign_v2.sh  submit_render_batch.sh  submit_render_smoke.sh  submit_render_v2.sh  submit_smoke_v7_2_v8.sh  submit_smoke_v7_4.sh  submit_smoke_v8_v2.sh  submit_smoke_v8p.sh  submit_smoke_v9.sh  submit_sota_v2.sh  (+14 more)
(+2 files in other folders)
